[gd_scene load_steps=36 format=2]

[ext_resource path="res://Textures/crow_portrait.png" type="Texture" id=1]
[ext_resource path="res://Scenes/Button.tscn" type="PackedScene" id=2]
[ext_resource path="res://Shaders/Shadow.shader" type="Shader" id=3]
[ext_resource path="res://Textures/ground.png" type="Texture" id=4]
[ext_resource path="res://Scenes/Character.tscn" type="PackedScene" id=5]
[ext_resource path="res://Scripts/StageThree.gd" type="Script" id=6]
[ext_resource path="res://Textures/fog.png" type="Texture" id=7]
[ext_resource path="res://Scenes/Mecanism.tscn" type="PackedScene" id=8]
[ext_resource path="res://Scenes/Alpaca.tscn" type="PackedScene" id=9]
[ext_resource path="res://Scenes/door.tscn" type="PackedScene" id=10]
[ext_resource path="res://Textures/background.png" type="Texture" id=11]
[ext_resource path="res://Scenes/EyeballPickupGreen.tscn" type="PackedScene" id=12]
[ext_resource path="res://sounds/crow.wav" type="AudioStream" id=13]

[sub_resource type="ShaderMaterial" id=1]
shader = ExtResource( 3 )
shader_param/color = Plane( 0, 0, 0, 1 )
shader_param/reduction = Plane( 1, 1, 1, 1 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 54, 71 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 1 )
region = Rect2( 54, 0, 54, 71 )

[sub_resource type="SpriteFrames" id=4]
animations = [ {
"frames": [ SubResource( 2 ), SubResource( 3 ) ],
"loop": false,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="ShaderMaterial" id=5]
render_priority = 1
shader = ExtResource( 3 )
shader_param/color = Plane( 0, 0, 0, 1 )
shader_param/reduction = Plane( 1, 1, 1, 1 )

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 1 )
region = Rect2( 108, 0, 54, 71 )

[sub_resource type="SpriteFrames" id=7]
animations = [ {
"frames": [ SubResource( 2 ), SubResource( 6 ) ],
"loop": false,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="ShaderMaterial" id=8]
shader = ExtResource( 3 )
shader_param/color = Plane( 0, 0, 0, 1 )
shader_param/reduction = Plane( 1, 1, 1, 1 )

[sub_resource type="AtlasTexture" id=9]
atlas = ExtResource( 1 )
region = Rect2( 162, 0, 54, 71 )

[sub_resource type="SpriteFrames" id=10]
animations = [ {
"frames": [ SubResource( 2 ), SubResource( 9 ) ],
"loop": false,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="ShaderMaterial" id=11]
shader = ExtResource( 3 )
shader_param/color = Plane( 0, 0, 0, 1 )
shader_param/reduction = Plane( 1, 1, 1, 1 )

[sub_resource type="AtlasTexture" id=12]
atlas = ExtResource( 1 )
region = Rect2( 216, 0, 54, 71 )

[sub_resource type="SpriteFrames" id=13]
animations = [ {
"frames": [ SubResource( 2 ), SubResource( 12 ) ],
"loop": false,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="ShaderMaterial" id=14]
shader = ExtResource( 3 )
shader_param/color = Plane( 0, 0, 0, 1 )
shader_param/reduction = Plane( 1, 1, 1, 1 )

[sub_resource type="AtlasTexture" id=15]
atlas = ExtResource( 1 )
region = Rect2( 270, 0, 54, 71 )

[sub_resource type="SpriteFrames" id=16]
animations = [ {
"frames": [ SubResource( 2 ), SubResource( 15 ) ],
"loop": false,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="ShaderMaterial" id=17]
shader = ExtResource( 3 )
shader_param/color = Plane( 0, 0, 0, 1 )
shader_param/reduction = Plane( 1, 1, 1, 1 )

[sub_resource type="RectangleShape2D" id=18]
extents = Vector2( 558.603, 10 )

[sub_resource type="RectangleShape2D" id=19]
extents = Vector2( 45.7739, 32.1107 )

[sub_resource type="RectangleShape2D" id=20]
extents = Vector2( 61.7156, 41.3112 )

[sub_resource type="ShaderMaterial" id=21]
shader = ExtResource( 3 )
shader_param/color = Plane( 0, 0, 0, 1 )
shader_param/reduction = Plane( 1, 1, 1, 1 )

[sub_resource type="RectangleShape2D" id=22]
extents = Vector2( 29.3971, 177.167 )

[node name="StageThree" type="Node2D"]
script = ExtResource( 6 )

[node name="Background" type="Node2D" parent="."]

[node name="Sprite" type="Sprite" parent="Background"]
texture = ExtResource( 11 )

[node name="Sprite2" type="Sprite" parent="Background"]
position = Vector2( -640, 0 )
texture = ExtResource( 11 )

[node name="Sprite3" type="Sprite" parent="Background"]
position = Vector2( 640, 0 )
texture = ExtResource( 11 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 450.205, 54.2703 )
texture = ExtResource( 7 )

[node name="CanvasModulate" type="CanvasModulate" parent="."]
color = Color( 0.658824, 0.658824, 0.658824, 1 )

[node name="Before" type="Node2D" parent="."]

[node name="Eyeball" parent="Before" instance=ExtResource( 12 )]
position = Vector2( 72, 80 )

[node name="Alpaca" parent="Before" instance=ExtResource( 9 )]
position = Vector2( 104, 60 )

[node name="Door" parent="Before" instance=ExtResource( 10 )]
position = Vector2( 260.209, 57.1052 )

[node name="Mecanisme" parent="Before" instance=ExtResource( 8 )]
position = Vector2( 155, 29 )
animation = "blue"
color = "green"

[node name="Portrait_1" type="AnimatedSprite" parent="Before"]
material = SubResource( 1 )
position = Vector2( -320, 0 )
frames = SubResource( 4 )

[node name="Button_1" parent="Before/Portrait_1" instance=ExtResource( 2 )]
position = Vector2( 1, 54 )

[node name="Portrait_2" type="AnimatedSprite" parent="Before"]
material = SubResource( 5 )
position = Vector2( -120, 0 )
frames = SubResource( 7 )

[node name="Button_2" parent="Before/Portrait_2" instance=ExtResource( 2 )]
position = Vector2( 0, 54 )

[node name="Portrait_3" type="AnimatedSprite" parent="Before"]
material = SubResource( 8 )
position = Vector2( -20, 0 )
frames = SubResource( 10 )

[node name="Button_3" parent="Before/Portrait_3" instance=ExtResource( 2 )]
position = Vector2( 0, 54 )

[node name="Portrait_4" type="AnimatedSprite" parent="Before"]
material = SubResource( 11 )
position = Vector2( -220, 0 )
frames = SubResource( 13 )

[node name="Button_4" parent="Before/Portrait_4" instance=ExtResource( 2 )]
position = Vector2( 0, 54 )

[node name="Portrait_5" type="AnimatedSprite" parent="Before"]
material = SubResource( 14 )
position = Vector2( -420, 0 )
frames = SubResource( 16 )

[node name="Button_5" parent="Before/Portrait_5" instance=ExtResource( 2 )]
position = Vector2( 0, 54 )

[node name="Node2D" parent="." instance=ExtResource( 5 )]
position = Vector2( -499.73, 56.6095 )

[node name="Camera2D" type="Camera2D" parent="Node2D"]
current = true
smoothing_speed = 10.0

[node name="After" type="Node2D" parent="."]

[node name="Sprite3" type="Sprite" parent="After"]
material = SubResource( 17 )
position = Vector2( -761, 44 )
texture = ExtResource( 4 )
region_enabled = true
region_rect = Rect2( 0, 0, 500, 1000 )

[node name="Sprite2" type="Sprite" parent="After"]
material = SubResource( 17 )
position = Vector2( 67, 183 )
texture = ExtResource( 4 )
region_enabled = true
region_rect = Rect2( 0, 0, 2000, 200 )

[node name="StaticBody2D" type="StaticBody2D" parent="After"]

[node name="CollisionPolygon2D" type="CollisionShape2D" parent="After/StaticBody2D"]
position = Vector2( -130.479, 93.7935 )
shape = SubResource( 18 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="After/StaticBody2D"]
position = Vector2( -575.193, 4.97942 )
shape = SubResource( 19 )

[node name="CollisionShape2D2" type="CollisionShape2D" parent="After/StaticBody2D"]
position = Vector2( -574.94, 80.3576 )
shape = SubResource( 20 )

[node name="StaticBody2D3" type="StaticBody2D" parent="After"]
position = Vector2( 217.205, 31.3157 )
__meta__ = {
"_edit_group_": true
}

[node name="ground" type="Sprite" parent="After/StaticBody2D3"]
modulate = Color( 0.266667, 0.180392, 0.180392, 1 )
material = SubResource( 21 )
position = Vector2( 0, -169 )
texture = ExtResource( 4 )
centered = false
region_enabled = true
region_rect = Rect2( 0, 0, 500, 168 )

[node name="StaticBody2D" type="CollisionShape2D" parent="After/StaticBody2D3"]
position = Vector2( 29.9292, -183.577 )
shape = SubResource( 22 )

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 13 )

[connection signal="body_entered" from="Before/Alpaca" to="." method="_on_Alpaca_body_entered"]
[connection signal="leave" from="Before/Door" to="." method="_on_Door_leave"]
[connection signal="activate" from="Before/Mecanisme" to="." method="_on_Mecanisme_activate"]
[connection signal="activate" from="Before/Portrait_1/Button_1" to="." method="_on_Button_1_activate"]
[connection signal="activate" from="Before/Portrait_2/Button_2" to="." method="_on_Button_2_activate"]
[connection signal="activate" from="Before/Portrait_3/Button_3" to="." method="_on_Button_3_activate"]
[connection signal="activate" from="Before/Portrait_4/Button_4" to="." method="_on_Button_4_activate"]
[connection signal="activate" from="Before/Portrait_5/Button_5" to="." method="_on_Button_5_activate"]
